--- a/backend/PrintAgent/print-test.html
+++ b/backend/PrintAgent/print-test.html
@@ -83,8 +83,8 @@
       customerName: "John Doe",
       date: new Date().toISOString(),
       items: [
-        { name: "Item A", qty: 2, price: 100 },
-        { name: "Item B", qty: 1, price: 250 }
+        { name: "Item A", qty: 2, price: 100,"PortionSize":"L" },
+        { name: "Item B", qty: 1, price: 250,"PortionSize":"M" }
       ],
       total: 450
     };
